added get ball data
