# src/routes/ballRoutes.js
@@ -6,6 +6,7 @@ import ballValidation from '../validations/BallValidations.js';
 
 const router = express.Router();
 
+router.get('/',ballController.getBallData)
 router.post('/create-ball',[ballValidation.createBallValidation],ballController.createBall)
 
 export default router;
